--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DirectoryReader.cs" />
     <Compile Include="FileSystemVisitor.cs" />
+    <Compile Include="IDirectoryReader.cs" />
     <Compile Include="VisitArgs.cs" />
     <Compile Include="FilterArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisitState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
