Add interface for FileSystemVisitor Change Filter event to Filter predicate param of constructor Fix small issues

--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -41,10 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DirectoryReader.cs" />
+    <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="FileSystemVisitor.cs" />
     <Compile Include="IDirectoryReader.cs" />
+    <Compile Include="IFileSystemVisitor.cs" />
     <Compile Include="VisitArgs.cs" />
-    <Compile Include="FilterArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisitState.cs" />
   </ItemGroup>
