Fix Task of Module 4

--- a/Task4.ConsoleApp/App.config
+++ b/Task4.ConsoleApp/App.config
@@ -8,13 +8,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
     </startup>
 
-    <watchManager>
+    <appSettings>
+        <add key="Culture" value="ru-RU" />
+    </appSettings>
+
+    <watchManager copy="Index">
         <watchers>
             <add path="D:\Test1_Watch"/>
             <add path="D:\Test2_Watch"/>
         </watchers>
         <rules defaultDest="D:\Test1_Dest">
-            <add filter="*.txt" dest="D:\Test2_Dest"/>
+            <add filter=".*[.]txt" dest="D:\Test2_Dest"/>
         </rules>
     </watchManager>
 </configuration>
