--- a/Task5.Tests.Model1/Task5.Tests.Model1.csproj
+++ b/Task5.Tests.Model1/Task5.Tests.Model1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED0C2060-BCD7-41BA-8465-2807729780C2}</ProjectGuid>
+    <ProjectGuid>{600A5D69-F140-413F-95EC-71556F28E108}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Task5.Model2</RootNamespace>
-    <AssemblyName>Task5.Model2</AssemblyName>
+    <RootNamespace>Task5.Tests.Model1</RootNamespace>
+    <AssemblyName>Task5.Tests.Model1</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerBLL3.cs" />
+    <Compile Include="AbstractSample.cs" />
+    <Compile Include="BaseSample.cs" />
+    <Compile Include="ComplexSample.cs" />
+    <Compile Include="ContractExportSample.cs" />
+    <Compile Include="IContractExportSample.cs" />
+    <Compile Include="ImportCtorSample.cs" />
+    <Compile Include="ImportSample.cs" />
+    <Compile Include="ISample.cs" />
+    <Compile Include="ISample1.cs" />
+    <Compile Include="ISample2.cs" />
+    <Compile Include="ISample3.cs" />
+    <Compile Include="DerivedSample.cs" />
+    <Compile Include="IBaseSample.cs" />
+    <Compile Include="ExportSample.cs" />
+    <Compile Include="IDerivedSample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample.cs" />
+    <Compile Include="Sample1.cs" />
+    <Compile Include="Sample2.cs" />
+    <Compile Include="Sample3.cs" />
+    <Compile Include="SampleWith2Ctors.cs" />
+    <Compile Include="ValueSample.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Task5\Task5.csproj">
