--- a/Task5.Tests.Model2/Task5.Tests.Model2.csproj
+++ b/Task5.Tests.Model2/Task5.Tests.Model2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A757ACE5-8DE6-425A-9BAE-B09252C94260}</ProjectGuid>
+    <ProjectGuid>{0FC913FC-CF10-4F73-BF7D-96C3E1FE1B08}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Task5.Model1</RootNamespace>
-    <AssemblyName>Task5.Model1</AssemblyName>
+    <RootNamespace>Task5.Tests.Model2</RootNamespace>
+    <AssemblyName>Task5.Tests.Model2</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,12 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerBLL.cs" />
-    <Compile Include="CustomerBLL2.cs" />
     <Compile Include="CustomerBLL3.cs" />
-    <Compile Include="CustomerDAL.cs" />
-    <Compile Include="ICustomerDAL.cs" />
-    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
