--- a/Task5/Task5.csproj
+++ b/Task5/Task5.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Attributes\ImportConstructorAttribute.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Attributes\ImportAttribute.cs" />
+    <Compile Include="IContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
